ADD: Fixed links

--- a/recipe.html
+++ b/recipe.html
@@ -18,10 +18,10 @@
         <!-- <a href="/starter_html/recipe.html">Recipes</a>
         <a href="/starter_html/travel.html">Travel</a>
         <a href="/starter_html/" class="clicked">Pets</a> -->
-        <a href="/common-project-tablet/recipe.html">RECIPES</a>
-        <a href="/common-project-tablet/travel.html">Travel</a>
+        <a href="/common-project/recipe.html">RECIPES</a>
+        <a href="/common-project/travel.html">Travel</a>
         <div class="dropdown">
-            <a href="/common-project-tablet" class="clicked">Pets</a>
+            <a href="/common-project/">Pets</a>
             <div class="dropdown-content">
                 <a href="#tuna">Tuna</a>
                 <a href="#luke">Luke</a>
@@ -43,7 +43,6 @@
 
             <!-- <img src="images/double_chocolate_cookies.png" alt="chocolate chip cookies" class="pet_cover"> -->
             <a href="#cookies"><img src="images/double_chocolate_cookies.png" alt="chocolate chip cookies" class="pet_cover"></a>
-            <a href="#cookies" class="lightbox" id="cookies"><span style="background-image: url(images/double_chocolate_cookies.png)"></span></a>
             <p>My daughter learned to make these cookies at a baking camp at Zingermanns and has tweaked the recipe to fit the taste buds of her siblings. They are extremely sugary so the salt helps to balance it. Note, these cookies are best eaten very
                 quickly.
             </p>
