--- a/travel.html
+++ b/travel.html
@@ -14,16 +14,15 @@
 
 <body>
     <div class="skip"><a href="">Skip to Main Content</a></div>
-
     <div class="navbar">
         <h1> Travel </h1>
         <!-- <a href="/starter_html/recipe.html">Recipes</a>
-        <a href="/starter_html/travel.html">Travel</a>
-        <a href="/starter_html/" class="clicked">Pets</a> -->
-        <a href="/common-project-tablet/recipe.html">Recipes</a>
-        <a href="/common-project-tablet/travel.html">TRAVEL</a>
+            <a href="/starter_html/travel.html">Travel</a>
+            <a href="/starter_html/" class="clicked">Pets</a> -->
+        <a href="/common-project/recipe.html">Recipes</a>
+        <a href="/common-project/travel.html">TRAVEL</a>
         <div class="dropdown">
-            <a href="/common-project-tablet" class="clicked">Pets</a>
+            <a href="/common-project/" class="clicked">Pets</a>
             <div class="dropdown-content">
                 <a href="#tuna">Tuna</a>
                 <a href="#luke">Luke</a>
@@ -61,16 +60,16 @@
 
                 <figure>
                     <video controls>
-                        <source src="images/yellowstone_prism.MOV">
-                        Your browser does not support the video tag.
-                    </video>
+                            <source src="images/yellowstone_prism.MOV">
+                            Your browser does not support the video tag.
+                        </video>
                     <figcaption>The multicolored layers get their hues from different species of bacteria living in the cooler water around the spring.</figcaption>
                 </figure>
                 <figure>
                     <video controls>
-                        <source src="images/yellowstone_buffalo.MOV">
-                        Your browser does not support the video tag.
-                    </video>
+                            <source src="images/yellowstone_buffalo.MOV">
+                            Your browser does not support the video tag.
+                        </video>
                     <figcaption>The buffalo were so common along the roads in Yellowstone that our mantra became "If it ain't lickin the car, we aren't stopping."</figcaption>
                 </figure>
 
@@ -213,7 +212,6 @@
                     <figcaption>Kenting National Park is also great for hiking.</figcaption>
                 </figure>
             </div>
-
         </div>
     </main>
 </body>
