--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Lekton&family=Playfair+Display:wght@500;600;700&family=Poppins&display=swap" rel="stylesheet">
     <link rel="icon" href="images/icon.png" type="image/png">
     <title>Pets</title>
-    <!-- <h1>Pets</h1> -->
 </head>
 
 <body>
@@ -19,10 +18,10 @@
         <!-- <a href="/starter_html/recipe.html">Recipes</a>
         <a href="/starter_html/travel.html">Travel</a>
         <a href="/starter_html/" class="clicked">Pets</a> -->
-        <a href="/common-project-tablet/recipe.html">Recipes</a>
-        <a href="/common-project-tablet/travel.html">Travel</a>
+        <a href="/common-project/recipe.html">Recipes</a>
+        <a href="/common-project/travel.html">Travel</a>
         <div class="dropdown">
-            <a href="/common-project-tablet" class="clicked">PETS</a>
+            <a href="/common-project/" class="clicked">PETS</a>
             <div class="dropdown-content">
                 <a href="#tuna">Tuna</a>
                 <a href="#luke">Luke</a>
