--- a/recipe.html
+++ b/recipe.html
@@ -18,10 +18,10 @@
         <!-- <a href="/starter_html/recipe.html">Recipes</a>
         <a href="/starter_html/travel.html">Travel</a>
         <a href="/starter_html/" class="clicked">Pets</a> -->
-        <a href="/common-project/recipe.html">RECIPES</a>
-        <a href="/common-project/travel.html">Travel</a>
+        <a href="/common_project/recipe.html">RECIPES</a>
+        <a href="/common_project/travel.html">Travel</a>
         <div class="dropdown">
-            <a href="/common-project/">Pets</a>
+            <a href="/common_project/">Pets</a>
             <div class="dropdown-content">
                 <a href="#tuna">Tuna</a>
                 <a href="#luke">Luke</a>
