--- a/travel.html
+++ b/travel.html
@@ -19,10 +19,10 @@
         <!-- <a href="/starter_html/recipe.html">Recipes</a>
             <a href="/starter_html/travel.html">Travel</a>
             <a href="/starter_html/" class="clicked">Pets</a> -->
-        <a href="/common-project/recipe.html">Recipes</a>
-        <a href="/common-project/travel.html">TRAVEL</a>
+        <a href="/common_project/recipe.html">Recipes</a>
+        <a href="/common_project/travel.html">TRAVEL</a>
         <div class="dropdown">
-            <a href="/common-project/" class="clicked">Pets</a>
+            <a href="/common_project/" class="clicked">Pets</a>
             <div class="dropdown-content">
                 <a href="#tuna">Tuna</a>
                 <a href="#luke">Luke</a>
