--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Lekton&family=Playfair+Display:wght@500;600;700&family=Poppins&display=swap" rel="stylesheet">
     <link rel="icon" href="images/icon.png" type="image/png">
     <title>Pets</title>
+    <script src="javascript.js"></script>
 </head>
 
 <body>
@@ -40,7 +41,7 @@
                 <!-- <img src="images/tuna.jpg" alt="a ginger cat" class="pet_cover" id="#tuna"> -->
                 <img src="images/tuna.jpg" alt="a ginger cat" class="pet_cover" id="tuna-image" onclick="openLightbox('images/tuna.jpg')">
                 <div id="lightbox" class="lightbox" onclick="closeLightbox()">
-                    <img id="lightbox-image" class="lightbox-content" alt="Enlarged Image">
+                    <img id="lightbox-image" class="lightbox-content" alt="Enlarged Image" src="">
                 </div>
                 <p>Tuna isn't just any cat – they're a bundle of furry joy with a personality as unique as their name. With their sleek coat resembling the deep blue sea, Tuna is a true beauty to behold. Their eyes, like shimmering gems, reflect the curiosity
                     and affection that they're ready to share with a loving family.</p>
@@ -234,6 +235,5 @@
         </div>
     </main>
 </body>
-<script src="javascript.js"></script>
 
 </html>
