--- a/travel.html
+++ b/travel.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Lekton&family=Playfair+Display:wght@500;600;700&family=Poppins&display=swap" rel="stylesheet">
     <link rel="icon" href="images/icon.png" type="image/png">
     <title>Travel</title>
+    <script src="javascript.js"></script>
 </head>
 
 <body>
@@ -42,7 +43,7 @@
             <img src="images/yellowstone_cauldron.gif" alt="yellowstone" class="pet_cover gif" onclick="openLightbox('images/yellowstone_cauldron.gif')">
             <img src="images/yellowstone_cauldron.jpg" alt="yellowstone" class="pet_cover pic" onclick="openLightbox('images/yellowstone_cauldron.pic')">
             <div id="lightbox" class="lightbox" onclick="closeLightbox()">
-                <img id="lightbox-image" class="lightbox-content" alt="Enlarged Image">
+                <img id="lightbox-image" class="lightbox-content" alt="Enlarged Image" src="">
             </div>
 
             <h3>Geographical Location: North America</h3>
@@ -227,6 +228,5 @@
         </div>
     </main>
 </body>
-<script src="javascript.js"></script>
 
 </html>
