--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <!-- <img src="images/tuna.jpg" alt="a ginger cat" class="pet_cover" id="#tuna"> -->
                 <img src="images/tuna.jpg" alt="a ginger cat" class="pet_cover" id="tuna-image" onclick="openLightbox('images/tuna.jpg')">
                 <div id="lightbox" class="lightbox" onclick="closeLightbox()">
-                    <img id="lightbox-image" class="lightbox-content" alt="Enlarged Image" src="">
+                    <img id="lightbox-image" class="lightbox-content" alt="Enlarged Image" src="a">
                 </div>
                 <p>Tuna isn't just any cat – they're a bundle of furry joy with a personality as unique as their name. With their sleek coat resembling the deep blue sea, Tuna is a true beauty to behold. Their eyes, like shimmering gems, reflect the curiosity
                     and affection that they're ready to share with a loving family.</p>
