--- a/travel.html
+++ b/travel.html
@@ -43,7 +43,7 @@
             <img src="images/yellowstone_cauldron.gif" alt="yellowstone" class="pet_cover gif" onclick="openLightbox('images/yellowstone_cauldron.gif')">
             <img src="images/yellowstone_cauldron.jpg" alt="yellowstone" class="pet_cover pic" onclick="openLightbox('images/yellowstone_cauldron.pic')">
             <div id="lightbox" class="lightbox" onclick="closeLightbox()">
-                <img id="lightbox-image" class="lightbox-content" alt="Enlarged Image" src="">
+                <img id="lightbox-image" class="lightbox-content" alt="Enlarged Image" src="a">
             </div>
 
             <h3>Geographical Location: North America</h3>
