--- a/recipe.html
+++ b/recipe.html
@@ -46,7 +46,7 @@
             <!-- <img src="images/double_chocolate_cookies.png" alt="chocolate chip cookies" id="tuna-image" class="pet_cover" onclick="openLightbox('images/double_chocolate_cookies')"> -->
             <img src="images/double_chocolate_cookies.png" alt="chocolate chip cookies" class="pet_cover" onclick="openLightbox('images/double_chocolate_cookies.png')">
             <div id="lightbox" class="lightbox" onclick="closeLightbox()">
-                <img id="lightbox-image" class="lightbox-content" alt="Enlarged Image" src="">
+                <img id="lightbox-image" class="lightbox-content" alt="Enlarged Image" src="a">
             </div>
             <!-- <a href="#cookies"><img src="images/double_chocolate_cookies.png" alt="chocolate chip cookies" class="pet_cover"></a> -->
             <p>My daughter learned to make these cookies at a baking camp at Zingermanns and has tweaked the recipe to fit the taste buds of her siblings. They are extremely sugary so the salt helps to balance it. Note, these cookies are best eaten very
